# unifi_notify

./: .gitignore  .travis.yml  Pipfile  notify.py  pylintrc  pyproject.toml  settings_example.py  settings_example.yaml
