[tool.poetry]
name = "unifi_notify"
version = "0.1.0"
description = ""
authors = ["Marko <zeratul@posteo.de>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.5"
PyYAML = "^3.13"
requests = "^2.20"
simplejson = "^3.16"

[tool.poetry.dev-dependencies]
pylint = "^2.1"
ipython = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
